# RayLibGame

./: CMakeLists.txt  GenerateLaunchJSON.cmake  README.md  imgui.ini
assets/images/: 8bit-pixel-graphic-blue-sky-background-with-clouds_8071-62229.avif
src/: Camera.cpp  Camera.h  Debug.h  Levels.h  LoadingScreen.h  Music.h  Objects.h  Player.h  Screen.h  WalkAndRunAnimations.h  main.cpp  main.h  oldcameras.cpp
src/Animations/: WalkAndRunAnimations.cpp  WalkAndRunAnimations.h
src/Audio/Music/: Music.cpp  Music.h
src/Camera/: Camera.cpp  Camera.h
src/Movement/: Jump.cpp  Jump.h  Movement.cpp  Movement.h
src/Player/: Player.h
src/UI/ImGUI/: imgui_manager.cpp  imgui_manager.h
src/UI/LoadingScreen/: LoadingScreen.cpp  LoadingScreen.h
src/Utils/: Utils.cpp  Utils.h
